; ModuleID = '/home/carl/AnghaBench/memcached/extr_thread.c_item_link.c'
source_filename = "/home/carl/AnghaBench/memcached/extr_thread.c_item_link.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @item_link(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %6 = call i32 @ITEM_key(%struct.TYPE_5__* %5)
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @hash(i32 %6, i32 %9)
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %4, align 4
  %12 = call i32 @item_lock(i32 %11)
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %14 = load i32, i32* %4, align 4
  %15 = call i32 @do_item_link(%struct.TYPE_5__* %13, i32 %14)
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @item_unlock(i32 %16)
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @hash(i32, i32) #1

declare dso_local i32 @ITEM_key(%struct.TYPE_5__*) #1

declare dso_local i32 @item_lock(i32) #1

declare dso_local i32 @do_item_link(%struct.TYPE_5__*, i32) #1

declare dso_local i32 @item_unlock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
